Remove follow link customisation so it's correctly aligned
Relates to #495

--- a/assets/stylesheets/responsive/custom.scss
+++ b/assets/stylesheets/responsive/custom.scss
@@ -541,11 +541,6 @@ color:#005068;
   }
 }
 
-.feed_link {
-  padding: 4px 0;
-  clear: left;
-}
-
 // Buttons
 
 a.link_button_green:hover,a.link_button_green_large:hover {
